Refactor connection sharing